tests/baselines/reference/unusedTypeParameters2.errors.txt
unusedTypeParameters2.ts(1,15): error TS6133: 'typeparameter1' is declared but its value is never read.


==== unusedTypeParameters2.ts (1 errors) ====
    class greeter<typeparameter1, typeparameter2> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: 'typeparameter1' is declared but its value is never read.
        private x: typeparameter2;
    
        public function1() {
            this.x;
        }
    }